--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,8 +1,9 @@
 COMPOSE_PROJECT_NAME=microservices
-USERNAME=user
+USER_NAME=user
 
 DB_VER=3.2
-UI_VER=2.0
+UI_VER=logging
 UI_PORT=9292
-POST_VER=1.0
-COMMENT_VER=1.0
+POST_VER=logging
+COMMENT_VER=logging
+ZIPKIN_ENABLED=true
