--- a/monitoring/prometheus/Dockerfile
+++ b/monitoring/prometheus/Dockerfile
@@ -1,3 +1,5 @@
-FROM prom/prometheus:v2.27.1
-ADD prometheus.yml /etc/prometheus/
-ADD alerts.yml /etc/prometheus/
+FROM prom/prometheus:v2.1.0
+
+COPY prometheus.yml /etc/prometheus
+
+COPY alerts.yml /etc/prometheus/
