--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,59 +1,68 @@
 version: '3.3'
 services:
   post_db:
-    image: mongo:${DB_VER}
+    image: mongo:3.2
     volumes:
       - post_db:/data/db
     networks:
-      - reddit_back
-
+      back_net:
+        ipv4_address: 10.0.2.2
   ui:
-    build: ./ui
-    image: ${USER_NAME}/ui:${UI_VER}
+    build: ../src/ui
+    image: ${USERNAME}/ui:${SERVVER}
     environment:
       - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
-    ports:
-      - ${UI_PORT}:9292/tcp
-    networks:
-      - reddit_front
-    logging:
-      driver: "fluentd"
-      options:
-        fluentd-address: localhost:24224
-        tag: service.ui
-
-  post:
-    build: ./post-py
-    image: ${USER_NAME}/post:${POST_VER}
-    environment:
-      - POST_DATABASE_HOST=post_db
-      - POST_DATABASE=posts
-      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
-    depends_on:
-      - post_db
-    ports:
-      - "5000:5000"
-    networks:
-      - reddit_front
-      - reddit_back
     logging:
       driver: "fluentd"
       options:
         fluentd-address: localhost:24224
         tag: service.post
-
+    ports:
+      - 9292:9292/tcp
+    networks:
+      front_net:
+        ipv4_address: 10.0.1.3
+  post:
+    build: ../src/post-py
+    image: ${USERNAME}/post:${SERVVER}
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
+    logging:
+      driver: "fluentd"
+      options:
+        fluentd-address: localhost:24224
+        tag: service.post
+    networks:
+      back_net:
+        ipv4_address: 10.0.2.4
+      front_net:
+        ipv4_address: 10.0.1.4
   comment:
-    build: ./comment
-    image: ${USER_NAME}/comment:${COMMENT_VER}
+    build: ../src/comment
+    image: ${USERNAME}/comment:${SERVVER}
     environment:
       - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
     networks:
-      - reddit_front
-      - reddit_back
+      back_net:
+        ipv4_address: 10.0.2.5
+      front_net:
+        ipv4_address: 10.0.1.5
 
 volumes:
   post_db:
+  prometheus_data:
 
 networks:
-  reddit_front:
-  reddit_back:
+  back_net:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: ${BACKNET}
+  front_net:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: ${FRONTNET}
+
