--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -1,6 +1,6 @@
 ---
 global:
-  scrape_interval: '5s'
+  scrape_interval: '10s'
 
 scrape_configs:
   - job_name: 'prometheus'
@@ -18,20 +18,47 @@ scrape_configs:
       - targets:
         - 'comment:9292'
 
+  - job_name: 'post'
+    static_configs:
+      - targets:
+        - 'post:5000'
+
   - job_name: 'node'
     static_configs:
       - targets:
         - 'node-exporter:9100'
 
+  - job_name: 'mongex'
+    static_configs:
+      - targets:
+        - 'mongodb-exporter:9216'
+
+  - job_name: 'blackbox'
+    metrics_path: /probe
+    params:
+      module: [icmp]
+    static_configs:
+      - targets:
+        - post
+        - comment
+        - ui
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: blackboxexporter:9115
+  
   - job_name: 'cadvisor'
     static_configs:
       - targets:
         - 'cadvisor:8080'
 
-  - job_name: 'post'
+  - job_name: 'docker'
     static_configs:
-    - targets:
-        - 'post:5000'
+      - targets:
+        - 'localhost:9323'
 
 rule_files:
   - "alerts.yml"
